--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,10 @@ services:
     ports:
       - 3306:3306
     environment: 
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./mysql:/var/lib/mysql
 
@@ -66,3 +66,25 @@ services:
       - mysql
     entrypoint: ["php", "/var/www/html/artisan"]
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    restart: always
+    environment:
+      PMA_HOST: mysql
+      PMA_USER: ${DB_USERNAME}
+      PMA_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "8080:80"
+    volumes:
+      - ./mysql:/var/lib/mysql
+    depends_on: 
+      - mysql
+
+  mailhog:
+      image: mailhog/mailhog
+      logging:
+        driver: 'none'  # disable saving logs
+      user: ${CURRENT_UID}
+      ports:
+        - 1025:1025 # smtp server
+        - 8025:8025 # web ui
