Change restart for unless-stopped

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    restart: always
+    restart: unless-stopped
     environment:
       PMA_HOST: mysql
       PMA_USER: ${DB_USERNAME}
